@@ -1,5 +1,10 @@
 2004-10-04  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* tools/helper.mk: Support for kernel TARGET_TYPE.
+	* ntoskrnl/Makefile: Simplified makefile.
+
+2004-10-04  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* tools/helper.mk: Clean autogenerated files.
 	* tools/regtests.c: Remove newlines.
 
